...
            .fillMaxSize()
            .padding(16.dp),
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        Text(
            text = "My Saved Tours",
            fontSize = 35.sp,
            modifier = Modifier.padding(25.dp)
        )
        // AI Aided work
        // Iterates over the saved tours and displays each tour using the TourCards composable
        LazyColumn(modifier = Modifier.weight(1f).padding(25.dp)) {
...
        }
        Button(
            modifier = Modifier.fillMaxWidth().padding(16.dp),
            onClick = { navController.navigate("tours_list_screen") },
            colors = ButtonDefaults.buttonColors(containerColor = Color(0xFFA8E6CF))
        ) {
            Text("Back to tours")
        }
    }
}


