...
        modifier = Modifier
            .fillMaxWidth(),
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.Center,

    ){
        // Button used to allow users to navigate to 'My Tours' screen
        Button(
            modifier = Modifier.fillMaxWidth().padding(16.dp),
            onClick = { navController.navigate("my_tours_screen")},
            colors = ButtonDefaults.buttonColors(containerColor = Color(0xFFA8E6CF))

        ) {
...
